fix: display select wrong size

--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ select {
     font-size: 1.25rem;
     margin-bottom: 2rem;
     width: 15%;
+    height: 3rem;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
